alignment in contact form fixed

--- a/styles.css
+++ b/styles.css
@@ -675,9 +675,6 @@ button {
   top: 190%;
   height: 316px;
   width: 327px;
-  align-items: center;
-  justify-content: center;
-  margin-left: 30%;
 }
 
 .container5 button {
@@ -695,7 +692,6 @@ button {
   background: #fff;
   width: 290px;
   height: 40px;
-  margin-left: -30px;
 }
 
 .container5 #email {
@@ -708,21 +704,17 @@ button {
   background: #fff;
   width: 290px;
   height: 40px;
-  margin-left: -30px;
 }
 
 .container5 form {
-  margin-top: -50px;
   display: flex;
   flex-direction: column;
-  align-items: center;
 }
 
 .container5 textarea {
   width: 290px;
   height: 100px;
   margin-top: 20px;
-  margin-left: -30px;
 }
 
 .container6 {
